+~ Console application draft +~ Decorators draft + Interfaces

--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,9 @@
     "require-dev": {
         "maslosoft/hedron": "*"
     },
+	"bin": [
+		"zamm"
+	],
     "license": "New BSD",
     "authors": [
         {
