--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "minimum-stability": "stable",
     "require": {
         "maslosoft/addendum": "~3.0",
-        "symfony/console": "~2.6"
+        "symfony/console": "~2.6",
+        "maslosoft/signals": "~1.0"
     },
 	"autoload": {
 		"psr-4": {
