--- a/.scrunitizer.yml
+++ b/.scrunitizer.yml
@@ -1,3 +1,6 @@
 filter:
-    paths: [src/*]
-    excluded_paths: [vendor/*, docs/*]
+    paths:
+        - src/*
+    excluded_paths:
+        - vendor/*
+        - docs/*
