--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
 	"bin": [
 		"zamm"
 	],
-    "license": "New BSD",
+    "license": "AGPL/Commercial",
     "authors": [
         {
             "name": "Peter Maselkowski",
