--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,10 @@
 	"bin": [
 		"zamm"
 	],
-	"license": "AGPL or Commercial",
+	"license": [
+		"AGPL",
+		"Commercial"
+	],
 	"authors": [
 		{
 			"name": "Peter Maselkowski",
