--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,7 @@
+code.analysis.excludes=
+file.reference.Zamm-vendor=vendor
+ignore.path=\
+    ${file.reference.Zamm-vendor}
 include.path=${php.global.include.path}
 php.version=PHP_56
 source.encoding=UTF-8
