--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,12 @@
 	],
 	"minimum-stability": "stable",
 	"require": {
+		"erusev/parsedown": "^1.6",
 		"maslosoft/addendum": "*",
-		"symfony/console": "~3",
-		"symfony/finder": "~3",
 		"maslosoft/embedi": "*",
-		"maslosoft/miniview": "*"
+		"maslosoft/miniview": "*",
+		"symfony/console": "~3",
+		"symfony/finder": "~3"
 	},
 	"autoload": {
 		"psr-4": {
