--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
 		"maslosoft/embedi": "*",
 		"maslosoft/miniview": "*",
 		"maslosoft/staple": "*",
-		"symfony/console": "~3",
-		"symfony/finder": "~3"
+		"symfony/console": ">=2.7 <5.0",
+		"symfony/finder": ">=2.7 <5.0"
 	},
 	"autoload": {
 		"psr-4": {
