--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 	],
 	"minimum-stability": "stable",
 	"require": {
-		"symfony/console": ">2 <=7"
+		"symfony/console": "^5|^6"
 	}
 	,
 	"require-dev": {
